--- a/hydcloud/Front/src/index.html
+++ b/hydcloud/Front/src/index.html
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>gestions Employees et Produits</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+<head>
+    <meta charset="utf-8">
+    <title>gestions Employees et Produits</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="bg">
+    <app-root></app-root>
 </body>
+
 </html>
