--- a/hydcloud/Front/src/index.html
+++ b/hydcloud/Front/src/index.html
@@ -12,6 +12,13 @@
 
 <body class="bg">
     <app-root></app-root>
+    <footer>
+        <div class="footer">
+            <h4>Copyright © Your Website 2020</h4>
+        </div>
+    </footer>
 </body>
+
+
 
 </html>
