--- a/hydcloud/Front/src/index.html
+++ b/hydcloud/Front/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>gestions Employees et Produits</title>
+    <title>Gestion Employés et Produits</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
