--- a/ProjetFilRouge-Front/src/index.html
+++ b/ProjetFilRouge-Front/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>gestions Employees et Produits</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+<head>
+    <meta charset="utf-8">
+    <title>Gestion Employés et Produits</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="bg">
+    <app-root></app-root>
+    <footer>
+        <div class="footer">
+            <h4>Copyright © Your Website 2020</h4>
+        </div>
+    </footer>
 </body>
+
+
+
 </html>
